--- a/about.html
+++ b/about.html
@@ -139,9 +139,11 @@
          
          
                 <footer>
-                  <a href="explore.html"<h3>Explore Africa</h3></a>
+                  <a href="explore.html" class="btn btn-primary"<h3>Explore Africa</h3></a>
                   <br />
+                   <br />
                  <a href="#" <p>Connect on Social </p></a>
+                  <br />
                   <a href="fac.png">
                   <img src="img/fac.png">
                   </a>
