--- a/places.html
+++ b/places.html
@@ -46,7 +46,7 @@
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
-                <a href="#" class="btn btn-success">Learn</a>
+                <a href="#" class="btn btn-primary">Learn</a>
             </div>
             <div class='col-md-3'>
                 <h1>CSS</h1>
@@ -66,7 +66,7 @@
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
-                <a href="#" class="btn btn-danger">Learn</a>
+                <a href="#" class="btn btn-primary">Learn</a>
             </div>
            <div class='col-md-3'>
                 <h1>Bootstrap</h1>
@@ -76,7 +76,7 @@
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
-                <a href="#" class="btn btn-danger">Learn</a>
+                <a href="#" class="btn btn-primary">Learn</a>
             </div>
         </div>
         </div>
@@ -91,7 +91,7 @@
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
-                <a href="#" class="btn btn-success">Learn</a>
+                <a href="#" class="btn btn-primary">Learn</a>
             </div>
             <div class='col-md-3'>
                 <h1>CSS</h1>
@@ -111,7 +111,7 @@
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
-                <a href="#" class="btn btn-danger">Learn</a>
+                <a href="#" class="btn btn-primary">Learn</a>
             </div>
            <div class='col-md-3'>
                 <h1>Bootstrap</h1>
@@ -121,7 +121,7 @@
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
-                <a href="#" class="btn btn-danger">Learn</a>
+                <a href="#" class="btn btn-primary">Learn</a>
             </div>
         </div>
         </div>
@@ -135,7 +135,7 @@
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
-                <a href="#" class="btn btn-success">Learn</a>
+                <a href="#" class="btn btn-primary">Learn</a>
             </div>
             <div class='col-md-3'>
                 <h1>CSS</h1>
@@ -155,7 +155,7 @@
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
-                <a href="#" class="btn btn-danger">Learn</a>
+                <a href="#" class="btn btn-primary">Learn</a>
             </div>
            <div class='col-md-3'>
                 <h1>Bootstrap</h1>
@@ -165,13 +165,13 @@
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
-                <a href="#" class="btn btn-danger">Learn</a>
+                <a href="#" class="btn btn-primary">Learn</a>
             </div>
         </div>
         </div>
         </div>
     <footer class="col-12">
-                  <a href="explore.html"<h3>Explore Africa</h3></a>
+                  <a href="explore.html" class="btn btn-primary"><h3>Explore Africa</h3></a>
                   <br />
                  <a href="#" <p>Connect on Social </p></a>
                   <a href="fac.png">
