made changes to files especially the script.js

--- a/about.html
+++ b/about.html
@@ -93,8 +93,8 @@
    <br />
    <hr />
    <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-             <a href="contact.html"><h2>African Cuisines</a></h2>
+        <div class="col-md-6 col-md-offset-4">
+             <a href="contact.html"><h2> Famous African Cuisines</a></h2>
         </div>     
      </div>
     <hr />
@@ -110,7 +110,7 @@
                       The name Jollof rice derives from the name of the Wolof people,
                         though in Senegal and Gambia the dish is referred to in Wolof as theibou dienne or benachin. 
                         In French-speaking areas, it is called riz au gras.
-                        If you need a recipe on Jollof rice, click the button.  
+                        If you need a recipe on Jollof rice, click the link.  
                         <br />
                       <a href="contact.html" class="btn btn-primary">Get the Recipe</a></p>
                       <br/>
@@ -129,7 +129,7 @@
                        Etor is a symbolic food given girls before womanhood.
                        It is prepared with Plantain and or with yam boiled and mashed, and mixed with palm oil. 
                        Groundnuts (Peanuts)and Eggs provide are used to garnish the dish
-                       If you need a recipe for Etor, click the button.
+                       If you need a recipe for Etor, click the link.
                        <br/>
                        <a href="contact.html" class="btn btn-primary">Get the Recipe </a></p>
                        <br/>
@@ -147,7 +147,7 @@
                        It is traditionally prepared by the Hausa people of northern Nigeria, Cameroon, Niger, Ghana 
                        and some parts of Sudan. 
                        Suya is generally made with skewered beef, ram, or chicken.
-                       Click the button for the recipe.
+                       Click the link for the recipe.
                       <br/>
                        <a href="contact.html" class="btn btn-primary">Get the recipe</a></p>
                        <br/>
