--- a/places.html
+++ b/places.html
@@ -26,7 +26,7 @@
             <!--the id here is used to link to the button -->
             <ul id="myCollapsingList"
                 class="nav navbar-nav collapsed navbar-collapse navbar-right">
-                 <li><a href="about.html"><h3>Home</h3></a></li> 
+                 <li><a href="index.html"><h3>Home</h3></a></li> 
                  <li><a href="explore.html"><h3>Explore Africa</h3></a></li>
                  <li><a href="places.html"><h3>Tourism Centers</h3></a></li>
                  <li><a href="contact.html"><h3>Contact</h3></a></li>
